<resources>
    <string name="app_name">Uni ABC</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="btnHistory">Ver historial</string>
    <string name="btnDelete">Eliminar</string>
    <string name="btnUpdate">Actualizar</string>
    <string name="todo">TODO</string>
    <string name="estado">ESTADO:</string>
    <string name="acceso">HABILITADO</string>
    <string name="nombre">Nombre:</string>
    <string name="doc">Documento:</string>
    <string name="programa">Programa:</string>
    <string name="email">E-mail:</string>
    <string name="logout">Logout</string>
    <string name="back">Back</string>
    <string name="textprueba">Prueba</string>
    <string name="textprueba2">limpio</string>
    <string name="documento">Documento</string>
    <string name="select">Seleccionar</string>
    <string name="documentoData">1002890681</string>
    <string name="statusData">Habilitado</string>
    <string name="nameData">Roberto Uchiha</string>
    <string name="emailData">Robertouchiha@ugenerica.edu.co</string>
    <string name="progData">Programación de ninjutsus</string>
    <string name="statusDataProf">Inhabilitado</string>
    <string name="nameDataProf">Jason Momoa</string>
    <string name="emailDataProf">Jasonmomoa@uabc.edu.co</string>
    <string name="progDataProf">Biología marina</string>


</resources>