<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:layout_marginStart="137dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="146dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.88"
        app:srcCompat="@drawable/_47144"
        tools:srcCompat="@drawable/_47144" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="360dp"
        android:layout_height="230dp"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="5dp"
        android:background="#A675B39A"
        android:stretchColumns="1"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/btnUpdateEst"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/teal_700">

            <TextView
                android:id="@+id/STATE"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="20dp"
                android:text="@string/estado"
                android:textColor="#FFFFFF"
                android:textColorHighlight="@color/purple_200"
                android:textColorHint="#00B3EA"
                android:textColorLink="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="20dp"
                android:text="@string/acceso"
                android:textColor="#FFFFFF"
                android:textColorHighlight="@color/purple_200"
                android:textColorLink="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/teal_700">

            <TextView
                android:id="@+id/row0"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#99E0E0"
                android:gravity="bottom"
                android:padding="10dp"
                android:text="@string/doc"
                android:textColor="#024545"
                android:textColorHighlight="@color/purple_200"
                android:textColorHint="#00B3EA"
                android:textColorLink="@color/white"
                android:textSize="16sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/docData"
                android:layout_width="fill_parent"
                android:layout_height="41dp"
                android:background="#99E0E0"
                android:padding="10dp"
                android:text="@string/documentoData"
                android:inputType="number"
                android:textColor="#000000"
                android:textColorHighlight="@color/purple_200"
                android:textColorHint="@color/black"
                android:textColorLink="@color/black"
                android:textSize="16sp"
                android:textStyle="normal"
                tools:text="@string/documentoData" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/teal_700">

            <TextView
                android:id="@+id/nombre"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#4DBFBE"
                android:gravity="bottom"
                android:padding="10dp"
                android:text="@string/nombre"
                android:textColor="#024545"
                android:textColorHighlight="@color/purple_200"
                android:textColorHint="#00B3EA"
                android:textColorLink="@color/white"
                android:textSize="16sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/nameData"
                android:layout_width="fill_parent"
                android:layout_height="41dp"
                android:background="#4DBEBD"
                android:padding="10dp"
                android:text="@string/nameData"
                android:textColor="#000000"
                android:inputType="text"
                android:textColorHighlight="@color/purple_200"
                android:textColorLink="@color/purple_200"
                android:textSize="16sp"
                android:textStyle="normal"
                tools:text="@string/nameData"
                tools:ignore="TextViewEdits" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/teal_700">

            <TextView
                android:id="@+id/rowC1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#99E0E0"
                android:gravity="bottom"
                android:padding="10dp"
                android:text="@string/programa"
                android:textColor="#024545"
                android:textColorHighlight="@color/purple_200"
                android:textColorHint="#00B3EA"
                android:textColorLink="@color/white"
                android:textSize="16sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/progData"
                android:layout_width="fill_parent"
                android:layout_height="41dp"
                android:background="#9AE1E1"
                android:gravity="bottom"
                android:padding="10dp"
                android:text="@string/progData"
                android:inputType="text"
                android:textColor="#000000"
                android:textColorHighlight="@color/purple_200"
                android:textColorLink="@color/white"
                android:textSize="16sp"
                android:textStyle="normal" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:background="@color/teal_700" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/teal_700">

            <TextView
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#4DBDBC"
                android:gravity="bottom"
                android:padding="10dp"
                android:text="@string/email"
                android:textColor="#024545"
                android:textColorHighlight="@color/purple_200"
                android:textColorHint="#00B3EA"
                android:textColorLink="@color/white"
                android:textSize="16sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/emailData"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#4DBDBC"
                android:gravity="bottom"
                android:padding="10dp"
                android:inputType="textWebEmailAddress"
                android:text="@string/emailData"
                android:textColor="#000000"
                android:textColorHighlight="@color/purple_200"
                android:textColorLink="@color/white"
                android:textSize="16sp"
                android:textStyle="normal" />
        </TableRow>


    </TableLayout>

    <Button
        android:id="@+id/btnHistoryEst"

        android:layout_width="231dp"
        android:layout_height="48dp"
        android:backgroundTint="#018685"
        android:onClick="viewHistorial"
        android:text="@string/btnHistory"
        app:layout_constraintBottom_toTopOf="@+id/btndeleteEst"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUpdateEst" />

    <Button
        android:id="@+id/btndeleteEst"
        android:layout_width="231dp"
        android:layout_height="48dp"
        android:layout_marginBottom="150dp"
        android:backgroundTint="#018685"
        android:onClick="viewHistorial"
        android:text="@string/btnDelete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHistoryEst" />

    <Button
        android:id="@+id/btnUpdateEst"
        android:layout_width="231dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="#018685"
        android:onClick="viewHistorial"
        android:text="@string/btnUpdate"
        app:layout_constraintBottom_toTopOf="@+id/btnHistoryEst"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2" />

    <ImageButton
        android:id="@+id/btnBackEst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="166dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/back"
        android:onClick="viewHistorial"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back"
        app:tint="#289190" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="175dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="logosalud"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2"
        app:srcCompat="@drawable/salud_appx48"
        tools:ignore="HardcodedText" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btndeleteEst"
        app:srcCompat="@drawable/u_abc"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/btnLogoutEst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="166dp"
        android:backgroundTint="#FFFFFF"
        android:onClick="viewHistorial"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logout"
        app:tint="#FF0000"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="30dp"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btnLogoutEst"
        app:layout_constraintTop_toBottomOf="@+id/btnLogoutEst" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="143dp"
        android:text="@string/back"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="@+id/btnBackEst"
        app:layout_constraintStart_toStartOf="@+id/btnBackEst"
        app:layout_constraintTop_toBottomOf="@+id/btnBackEst"
        app:layout_constraintVertical_bias="0.45" />

    <TextView
        android:id="@+id/textViewPrueba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="39dp"
        android:text="@string/textprueba"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />




</androidx.constraintlayout.widget.ConstraintLayout>